--- a/notebook/01.Data_exploration_and_cleaning.ipynb
+++ b/notebook/01.Data_exploration_and_cleaning.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "ab46222e",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "2e095e97",
    "metadata": {},
    "outputs": [
@@ -95,9 +95,9 @@
      "text": [
       "Downloading...\n",
       "From (original): https://drive.google.com/uc?id=1Hg3ENUzwsb3rLSFqEW9zcHPB98VVApXi\n",
-      "From (redirected): https://drive.google.com/uc?id=1Hg3ENUzwsb3rLSFqEW9zcHPB98VVApXi&confirm=t&uuid=51af724e-9917-4019-bad7-0faeba2b0a16\n",
-      "To: c:\\Users\\Admin\\OneDrive\\Desktop\\music_recommendation_system_based_on_emotion\\notebook\\raw_data.csv\n",
-      "100%|██████████| 1.15G/1.15G [02:17<00:00, 8.36MB/s]\n"
+      "From (redirected): https://drive.google.com/uc?id=1Hg3ENUzwsb3rLSFqEW9zcHPB98VVApXi&confirm=t&uuid=d1b0d497-5ec0-420f-a789-aa11aab2f331\n",
+      "To: c:\\Users\\Admin\\music_recommendation_system_based_on_emotion\\notebook\\raw_data.csv\n",
+      "100%|██████████| 1.15G/1.15G [03:58<00:00, 4.81MB/s]\n"
      ]
     },
     {
@@ -106,7 +106,7 @@
        "'raw_data.csv'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "47226604",
    "metadata": {},
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "19a206ac",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
        "[5 rows x 39 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "4d961e8a",
    "metadata": {},
    "outputs": [
@@ -388,7 +388,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "0d7ebc76",
    "metadata": {},
    "outputs": [
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "5ca1ebf4",
    "metadata": {},
    "outputs": [
@@ -472,7 +472,7 @@
        "(551443, 39)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "c3de41d2",
    "metadata": {},
    "outputs": [
@@ -557,7 +557,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "3b93c13c",
    "metadata": {},
    "outputs": [],
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "0b0081d0",
    "metadata": {},
    "outputs": [
@@ -604,7 +604,7 @@
        "(551324, 39)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "9a8a1697",
    "metadata": {},
    "outputs": [
@@ -633,7 +633,7 @@
        "np.int64(53382)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "8a03f960",
    "metadata": {},
    "outputs": [],
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "44f6bf30",
    "metadata": {},
    "outputs": [
@@ -664,7 +664,7 @@
        "(497942, 39)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "id": "db1c5815",
    "metadata": {},
    "outputs": [],
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "id": "779de0ce",
    "metadata": {},
    "outputs": [
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "id": "561c1895",
    "metadata": {},
    "outputs": [
@@ -751,7 +751,7 @@
        "<Axes: xlabel='emotion'>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "id": "ed0e61b9",
    "metadata": {},
    "outputs": [
@@ -782,7 +782,7 @@
        "np.int64(17)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "id": "8e5c74d9",
    "metadata": {},
    "outputs": [
@@ -803,7 +803,7 @@
        "np.int64(2)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "id": "09c7b5f6",
    "metadata": {},
    "outputs": [
@@ -824,7 +824,7 @@
        "np.int64(1)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "id": "f47b3914",
    "metadata": {},
    "outputs": [
@@ -847,7 +847,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "id": "cff7a21f",
    "metadata": {},
    "outputs": [],
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "id": "fc0172af",
    "metadata": {},
    "outputs": [
@@ -894,7 +894,7 @@
        "(497917, 32)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "id": "d3b4468a",
    "metadata": {},
    "outputs": [
@@ -927,7 +927,7 @@
        "Name: count, Length: 127306, dtype: int64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "id": "585040e3",
    "metadata": {},
    "outputs": [],
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "id": "ef5f6d0e",
    "metadata": {},
    "outputs": [
@@ -960,7 +960,7 @@
        "(171535, 32)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "id": "cfdfdf85",
    "metadata": {},
    "outputs": [
@@ -993,7 +993,7 @@
        "Name: count, Length: 1578, dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 27,
    "id": "88206761",
    "metadata": {},
    "outputs": [
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 28,
    "id": "7f376abb",
    "metadata": {},
    "outputs": [
@@ -1099,7 +1099,7 @@
        "<Axes: xlabel='emotion'>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1120,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 29,
    "id": "e2785a44",
    "metadata": {},
    "outputs": [
@@ -1142,7 +1142,7 @@
        "Name: count, Length: 712, dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 30,
    "id": "e273b24a",
    "metadata": {},
    "outputs": [
@@ -1173,7 +1173,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 31,
    "id": "66600d19",
    "metadata": {},
    "outputs": [
@@ -1280,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 32,
    "id": "5b77e78c",
    "metadata": {},
    "outputs": [
@@ -1325,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 33,
    "id": "2e78c525",
    "metadata": {},
    "outputs": [
@@ -1348,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 34,
    "id": "505e0a2a",
    "metadata": {},
    "outputs": [
@@ -1368,7 +1368,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1397,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 35,
    "id": "e60177a7",
    "metadata": {},
    "outputs": [
@@ -1442,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 36,
    "id": "86b1a944",
    "metadata": {},
    "outputs": [
@@ -1452,7 +1452,7 @@
        "<Axes: xlabel='emotion', ylabel='Positiveness'>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1474,7 +1474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 37,
    "id": "823d1250",
    "metadata": {},
    "outputs": [
@@ -1484,7 +1484,7 @@
        "<Axes: xlabel='emotion', ylabel='Energy'>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1506,7 +1506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 38,
    "id": "aa93fa62",
    "metadata": {},
    "outputs": [
@@ -1516,7 +1516,7 @@
        "<Axes: xlabel='emotion', ylabel='Danceability'>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1538,7 +1538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 39,
    "id": "4d61da38",
    "metadata": {},
    "outputs": [
@@ -1548,7 +1548,7 @@
        "<Axes: xlabel='emotion', ylabel='Tempo'>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1570,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 40,
    "id": "5e844438",
    "metadata": {},
    "outputs": [
@@ -1580,7 +1580,7 @@
        "<Axes: xlabel='emotion', ylabel='Acousticness'>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1630,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 41,
    "id": "ab86b092",
    "metadata": {},
    "outputs": [
@@ -1697,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 42,
    "id": "8a28c968",
    "metadata": {},
    "outputs": [
@@ -1750,7 +1750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 43,
    "id": "c8388352",
    "metadata": {},
    "outputs": [],
@@ -1761,7 +1761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 44,
    "id": "0bd26ecb",
    "metadata": {},
    "outputs": [],
@@ -1779,7 +1779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 45,
    "id": "c81db4bc",
    "metadata": {},
    "outputs": [],
@@ -1791,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 46,
    "id": "0a8eeb39",
    "metadata": {},
    "outputs": [
@@ -1801,7 +1801,7 @@
        "dtype('float64')"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1812,7 +1812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 47,
    "id": "24627493",
    "metadata": {},
    "outputs": [],
@@ -1823,7 +1823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 48,
    "id": "fe3228ef",
    "metadata": {},
    "outputs": [
@@ -1844,7 +1844,7 @@
        "Name: Artist(s), Length: 171535, dtype: object"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1855,7 +1855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 49,
    "id": "8cd37137",
    "metadata": {},
    "outputs": [],
@@ -1867,7 +1867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 50,
    "id": "6a4cd964",
    "metadata": {},
    "outputs": [
@@ -1888,7 +1888,7 @@
        "Name: text, Length: 171535, dtype: object"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1899,7 +1899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 51,
    "id": "c68bcbd9",
    "metadata": {},
    "outputs": [
@@ -2257,7 +2257,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2268,7 +2268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 52,
    "id": "6d1a31fd",
    "metadata": {},
    "outputs": [],
@@ -2283,7 +2283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 53,
    "id": "cacfc2bd",
    "metadata": {},
    "outputs": [
@@ -2303,7 +2303,7 @@
        "<Axes: ylabel='Genre'>"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2332,7 +2332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 54,
    "id": "6c74174b",
    "metadata": {},
    "outputs": [
@@ -2353,7 +2353,7 @@
        "Name: Genre, Length: 171535, dtype: object"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2364,7 +2364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 55,
    "id": "278d9367",
    "metadata": {},
    "outputs": [
@@ -2419,45 +2419,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 56,
    "id": "6b9ef22a",
    "metadata": {},
    "outputs": [],
    "source": [
     "data.to_csv(\"cleaned_data.csv\", index = False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a0c6e964",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14259b1f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7a4c03fe",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3c865a4c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -2476,7 +2444,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
