--- a/notebook/02.Model_training.ipynb
+++ b/notebook/02.Model_training.ipynb
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 308,
    "id": "ae9c7868",
    "metadata": {},
    "outputs": [
@@ -868,38 +868,38 @@
      "text": [
       "\n",
       " Final Recommendations:\n",
-      "                                                    song Artist(s)  emotion  \\\n",
-      "58425  The Last Dragon Title Song From Berry Gordys T...    dragon      joy   \n",
-      "58420                                 Chasing The Dragon    dragon  sadness   \n",
-      "58423   The Sun Whose Rays Are All Ablaze The Moon and I    dragon      joy   \n",
-      "58430                                         The Seeker    dragon      joy   \n",
-      "58435                                         Gunslinger    dragon      joy   \n",
+      "                                   song          Artist(s) emotion  \\\n",
+      "20761                        Love Songs  benjamin ingrosso     joy   \n",
+      "95830                       Modern Soul        james blake     joy   \n",
+      "229311  Songs About Me, Songs About You      uncle kracker     joy   \n",
+      "135233             Life Is for Learning        marvin gaye    love   \n",
+      "122054             Songs in the Kitchen          lee brice     joy   \n",
       "\n",
-      "                             Genre_str  similarity_score  \n",
-      "58425  progressiverock newwave poprock          0.596527  \n",
-      "58420  progressiverock newwave poprock          0.588231  \n",
-      "58423  progressiverock newwave poprock          0.568471  \n",
-      "58430  progressiverock newwave poprock          0.554386  \n",
-      "58435  progressiverock newwave poprock          0.551422  \n",
+      "                              Genre_str  similarity_score  \n",
+      "20761                               pop          0.293420  \n",
+      "95830   electronic dubstep experimental          0.284678  \n",
+      "229311                  rock pop hiphop          0.261165  \n",
+      "135233                    pop funk soul          0.254459  \n",
+      "122054                          country          0.252959  \n",
       "\n",
       " Top 5 Similar Songs:\n",
-      " * Growing Up the Hard Way\n",
-      " * Weevil Woman 71\n",
-      " * The Last Dragon Title Song From Berry Gordys The Last Dragon\n",
-      " * 1979\n",
-      " * The Seeker\n",
+      " * Once Upon A Time\n",
+      " * Goodbye\n",
+      " * Urgency\n",
+      " * Maybe Someday\n",
+      " * Cross That Bridge\n",
       "\n",
       " Top 5 Similar Artists:\n",
-      " * peace\n",
-      " * locc\n",
-      " * s seconds of summer\n",
-      " * a great big world\n",
-      " * a perfect circle\n"
+      " * ashley mcbryde\n",
+      " * astronautalis\n",
+      " * l99l\n",
+      " * hed pe\n",
+      " * 2 live crew\n"
      ]
     }
    ],
    "source": [
-    "user_input = \"songs from dragon\"\n",
+    "user_input = \"songs from 1991\"\n",
     "recommendations_df, similar_songs, similar_artists = get_recommendations(user_input)\n",
     "\n",
     "print(\"\\n Final Recommendations:\")\n",
